<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">palmapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="search">Search</string>
    <string name="perkebunan">Perkebunan</string>
    <string name="jasa">Jasa</string>
    <string name="company">Company</string>
    <string name="register">Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="the_palm_app_user">The Palm App User</string>
    <string name="username">Username</string>
    <string name="history">History</string>
    <string name="klasifikasi_name">Nama</string>
    <string name="name">Nama</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="email">Email</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="email_can_t_be_edited">Email cant be edited</string>
    <string name="password">Password</string>
    <string name="biaya">Biaya</string>
    <string name="berat_buah">Berat Buah</string>
    <string name="nama_bibit">Nama Bibit</string>
    <string name="nama_pupuk">Nama Pupuk</string>
    <string name="stakeholder_type">Jenis Stakeholder</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="toko_bibit">Toko Bibit</string>
    <string name="jenis_bibit">Jenis Bibit</string>
    <string name="populasi_tanaman">Populasi Tanaman</string>
    <string name="harga_bibit">Harga Bibit</string>
    <string name="toko_pupuk">Toko Pupuk</string>
    <string name="jenis_pupuk">Jenis Pupuk</string>
    <string name="harga_pupuk">Harga Pupuk</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="tanggal_panen">Tanggal Panen</string>
    <string name="hasil_panen">Hasil Panen</string>
    <string name="tanggal_sampai">Tanggal Sampai</string>
    <string name="tanggal_angkut">Tanggal Pengangkutan</string>
    <string name="tanggal_angkut_">Tanggal Pengangkutan :</string>
    <string name="update_user">Update User</string>
    <string name="catatan">Catatan</string>
    <string name="luas_kebun">Luas Kebun</string>
    <string name="luas_arealkebun">Luas Areal Kebun</string>
    <string name="jumlah_bbm">Jumlah BBM</string>
    <string name="kapasitas_panen">Kapasitas Panen</string>
    <string name="kerapatan_panen">Kerapatan Panen</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload gambar</string>
    <string name="nomor_telephone">Nomor Telephone</string>
    <string name="ketik_nama_pengguna">Ketikan disini nama pengguna</string>
    <string name="ketik_jumlah_bbm">Ketikan disini jumlah BBM yang digunakan</string>
    <string name="ketik_tanggal_panen">Ketikan disini tanggal panen TBS</string>
    <string name="ketik_tanggal_sampai">Ketikan disini tanggal sampai</string>
    <string name="ketik_tanggal_angkut">Ketikan disini tanggal pengangkutan</string>
    <string name="ketik_biaya">Ketikan disini biaya</string>
    <string name="ketik_catatan">Ketikan catatan</string>
    <string name="ketik_perusahaan_pengguna">Ketikan disini perusahaan pengguna</string>
    <string name="ketik_kuantitas">Ketikan disini berat sawit</string>
    <string name="ketik_kuantitas_truk">Ketikan disini banyak truk</string>
    <string name="ketik_alamat">Ketikan disini alamat</string>
    <string name="ketik_no_pengguna">Ketikan disini nomor telephone pengguna</string>
    <string name="ketik_email_pengguna">Ketikan disini email pengguna</string>
    <string name="masukkan_tanggal_lahir">MasukkanTanggal Lahir</string>
    <string name="you_don_t_have_favorite_movie">you dont have history</string>

    <string name="masukkan_nama_lengkap">Masukkan Username</string>
    <string name="nama_kebun">Kebun Telti</string>
    <string name="make_a_order">Make a Order </string>
    <string name="lengkapi_data">Lengkapi Data </string>
    <string name="date_time_kebun">19-08-2022</string>
    <string name="kuantitas_kebun">3380</string>
    <string name="kuantitas">Kuantitas</string>
    <string name="kuantitas_truk">Kuantitas Truk</string>
    <string name="ton">Ton</string>
    <string name="desc">Perspiciatis est soluta ipsa cumque eius. Fuga vel consequatur aspernatur ut autem ipsa alias est magni. Vitae dignissimos quidem quos rerum doloremque maxime et. Omnis dicta quia labore veritatis.\nSunt et sed ut aspernatur. Voluptas assumenda possimus ut aut et aperiam. Et veritatis quibusdam consequatur consequatur doloremque. Deserunt sint minima ut distinctio quas.\nUt consequatur qui ad dolorem dolor et. Eum accusamus quia. Et aliquid labore non quibusdam repellat. Molestiae repudiandae possimus dolorum praesentium dolorum atque molestiae. Soluta vel corporis porro asperiores. Ea id qui.</string>
    <string name="alamat_kebun">Jl. Sumantri Brodjonegoro</string>
    <string name="registering_user_please_wait" tools:ignore="TypographyEllipsis">Registering user, Please Wait …</string>
    <string name="logging_in_please_wait" tools:ignore="TypographyEllipsis">Logging in, Please Wait …</string>
</resources>