<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    tools:context=".view.AddJasaFragment">

    <TextView
        android:layout_marginLeft="130dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_black"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/make_a_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_nama_add_jasa"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                style="@style/EditTextStyle"
                android:inputType="text"
                android:hint="@string/ketik_nama_pengguna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/nomor_telephone"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_no_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_no_pengguna"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/email"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_email_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_email_pengguna"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/perusahaan"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_perusahaan_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_perusahaan_pengguna"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/biaya"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_biaya_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_biaya"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/kuantitas"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_kuantitas_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_kuantitas_truk"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/alamat"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_alamat_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_alamat"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/tanggal_angkut"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_tanggal_angkut_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_tanggal_angkut"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/tanggal_sampai"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_tanggal_sampai_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_tanggal_sampai"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/jumlah_bbm"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_jumlah_bbm_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_jumlah_bbm"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/catatan"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_catatan_add_jasa"
                style="@style/EditTextStyle"
                android:hint="@string/ketik_catatan"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/upload"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/img_add_jasa"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_add_img"
                android:scaleType="fitXY"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/btn_submit_add_jasa"
                style="@style/ButtonStyle"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>



    </ScrollView>




</LinearLayout>