<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    tools:context=".view.AddFragment">

    <TextView
        android:layout_marginLeft="130dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_black"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/make_a_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />




        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="30dp"
                style="@style/TextViewStyle"
                android:text="@string/stakeholder_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_add_kebun"
                android:paddingStart="5dp"
                android:text="@string/perkebunan"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_add_jasa"
                android:paddingStart="5dp"
                android:text="@string/jasa"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_add_company"
                android:paddingStart="5dp"
                android:text="@string/perusahaan"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>







</LinearLayout>