<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_3"

    tools:context=".view.LoginFragment">

    <TextView
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:padding="15dp"
        android:hint="@string/masukkan_email"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:hint="@string/masukkan_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/btn_view_pass"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/et_password"
            android:layout_alignEnd="@+id/et_password"
            android:layout_alignBottom="@+id/et_password"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_outline_remove_green_eye_24" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        style="@style/ButtonStyle"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="120dp"
            android:textStyle="bold"
            android:text="@string/dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/btn_signup"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:shadowColor="@color/brown"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>




</LinearLayout>